--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HackSurrey 2018</title>
+  <title>HackSurrey Mk2</title>
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114x114.png" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-touch-icon-72x72.png" />
@@ -11,14 +11,14 @@
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-touch-icon-152x152.png" />
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
-  <meta name="application-name" content="HackSurrey 2018" />
+  <meta name="application-name" content="HackSurrey Mk2" />
   <meta name="msapplication-TileColor" content="#111116" />
   <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 
-  <meta property="og:title" content="HackSurrey 2018" />
-  <meta property="og:description" content="HackSurrey 2018 Hackathon: 17th - 18th November 2018. 150 students, 24 hours, what will you build?" />
+  <meta property="og:title" content="HackSurrey Mk2" />
+  <meta property="og:description" content="HackSurrey Mk2 Hackathon: 16th - 17th February 2019. 150 students, 24 hours, what will you build?" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://2018.hacksurrey.uk/" />
+  <meta property="og:url" content="https://mk2.hacksurrey.uk/" />
   <meta property="og:image" content="/apple-touch-icon-152x152.png" />
 
   <script src="./resources/styling.js"></script>
