--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 
   <meta property="og:title" content="HackSurrey Mk2" />
-  <meta property="og:description" content="HackSurrey Mk2 Hackathon: 23rd - 24th February 2019. 150 students, 24 hours, what will you build?" />
+  <meta property="og:description" content="HackSurrey Mk2 Hackathon: 9th - 10th February 2019. 150 students, 24 hours, what will you build?" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mk2.hacksurrey.uk/" />
   <meta property="og:image" content="/apple-touch-icon-152x152.png" />
