--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,12 @@
   <script src="./resources/application.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id="></script> -->
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', '');
-    // TODO get new analytics tag
-  </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128994477-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-128994477-1');
+</script>
 </body>
 </html>
