--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mk2.hacksurrey.uk/" />
   <meta property="og:image" content="/apple-touch-icon-152x152.png" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
   <script src="./resources/styling.js"></script>
 </head>
 <body>
